<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.aubg.inf397.emergencyapp.HelpDetailsScreen">

    <ImageView
        android:id="@+id/contactPhoto"
        android:layout_width="160dp"
        android:layout_height="235dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/str_details_photo"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/str_details_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/assistanceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/str_details_assistance"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/providedAssistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/str_details_location"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/officeLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hoursLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/str_details_hours"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/workingHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/callPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="phoneContact"
            android:text="@string/str_details_number" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/contactPhoto"
        android:layout_marginTop="12dp"
        android:headerDividersEnabled="false" />

</RelativeLayout>
